add wk01 pdf, update syllabus

--- a/Syllabus.html
+++ b/Syllabus.html
@@ -89,9 +89,13 @@ img {
 <p><strong>If you have no prior experience with R you have some choices.</strong></p>
 <ol style="list-style-type: decimal">
 <li>Go through any number of self-paced free online tutorials. Recommended ones are <a href="https://www.datacamp.com/courses/free-introduction-to-r">DataCamp</a>, <a href="http://tryr.codeschool.com/">TryR</a>, and <a href="http://www.r-tutor.com/r-introduction">R Tutorial</a>.<br /></li>
-<li>Go through a self-paced online R Bootcamp specifically designed by Dr. Donatello to provide just the basics needed for coursework in this class. This includes an introduction to Markdown. This Bootcamp can be found at <a href="http://norcalbiostat.github.io/R-Bootcamp/" class="uri">http://norcalbiostat.github.io/R-Bootcamp/</a></li>
-<li>Plan on enrolling in the in-person version of this R Bootcamp at the start of the semester. This will be 2 hour classes, 2 nights/week, for the first 3 weeks. Specific enrollment details will be announced as they are finalized.</li>
+<li>Go through a self-paced online R Bootcamp specifically designed by me to provide just the basics needed for coursework in this class. This includes an introduction to Markdown. This Bootcamp can be found at <a href="http://norcalbiostat.github.io/R-Bootcamp/" class="uri">http://norcalbiostat.github.io/R-Bootcamp/</a></li>
+<li>Enrolling in either</li>
 </ol>
+<ul>
+<li>The in-person version of this R Bootcamp (Math 199-10 1/28-2/18 TR 5-7pm Holt 171).</li>
+<li>The full fledged R course (Math 398, MW 3-4:15 Holt 155).</li>
+</ul>
 </div>
 </div>
 <div id="online-component" class="section level2">
@@ -106,10 +110,11 @@ img {
 </div>
 <div id="assignments-and-grading-policy" class="section level2">
 <h2>Assignments and Grading Policy</h2>
-<p>Practice problems will be assigned regularly and will be worked on during and outside of class time. An open note quiz will be administered at appropriate intervals, typically a day or two after a section or topic has been completed. Quiz questions will directly come from the practice problems, so it is in your best interest to have all problems completed and well-organized.</p>
-<p>You will also be expected to participate in discussions during class, and outside of class on the forum board.</p>
+<p>Practice problems will be assigned regularly and will be worked on during and outside of class time. An open note quiz will be administered at appropriate intervals. Quiz questions will directly come from the practice problems, so it is in your best interest to have all problems completed and well-organized. Quiz questions and homework problems will be graded using the following <a href="admin/rubric.html">Rubric</a>.</p>
+<p>You are also expected to participate in discussions during class, and outside of class on the discussion board. If you have no questions of your own, then help answer other people’s questions.</p>
 <p>No Late work accepted without prior approval.</p>
-<p><strong>Weights</strong>: Quizzes 20%; Homework 20%; Midterm Report 15%; Final Report 15%; Midterm Exam 15%, Final Exam 15% <strong>Letter grade</strong>: A [95-100), A- [90-94), B+ [87, 89), B [83-86), B- [80, 82), C+ [77-79), C [73-76), C- [79, 72), D+ [65, 69), D [60, 64), F &lt; 60</p>
+<p><strong>Weights</strong>: Quizzes &amp; Homework 25%; Participation 15%; Reports(2) 30%; Exams(2) 30%</p>
+<p><strong>Letter grade</strong>: A [95-100), A- [90-94), B+ [87, 89), B [83-86), B- [80, 82), C+ [77-79), C [73-76), C- [79, 72), D+ [65, 69), D [60, 64), F &lt; 60</p>
 <div id="time-commitment" class="section level3">
 <h3>Time Commitment</h3>
 <p>CSUC and Federal policy states that “One hour of classroom or direct faculty instruction and a minimum of two hours of out-of-class student work each week for approximately fifteen weeks for one semester hour of credit”.</p>
