--- a/wk01.html
+++ b/wk01.html
@@ -153,7 +153,23 @@ border: 1px solid black;}
 </div>
 <div id="wednesday" class="section level3">
 <h3>Wednesday</h3>
-<p><strong>Prepare:</strong> Read Afifi Ch 1-3. “<em>On Your Own</em>” problems for Ch 2.</p>
+<p><strong>Prepare:</strong></p>
+<ul>
+<li>Download and install R and R studio
+<ul>
+<li>You can find a set of slides on how to install both <a href="http://htmlpreview.github.io/?https://github.com/norcalbiostat/R-Bootcamp/blob/gh-pages/lecture_notes/0_2_-_Setup_R_and_R_Studio.html">here</a></li>
+<li>note that these slides are from a different class. These slides also contain links to You Tube videos that can help you with these installations.</li>
+<li>Don’t worry about the swirl lessons. They will not be used for this class.</li>
+</ul></li>
+<li>Review <a href="notes/lec01_data_prep.html">lec01</a> notes.<br /></li>
+<li>We will be starting to use R and Markdown at the same time tomorrow. If you have never used Markdown then you are advised to
+<ul>
+<li>Follow along with this 6 minute tutorial <a href="https://www.youtube.com/watch?v=DNS7i2m4sB0" class="uri">https://www.youtube.com/watch?v=DNS7i2m4sB0</a></li>
+<li>Review the basics of the markdown syntax in this 2 minute video <a href="https://www.youtube.com/watch?v=Nc0CS0nX-M4" class="uri">https://www.youtube.com/watch?v=Nc0CS0nX-M4</a></li>
+</ul></li>
+<li>Complete Afifi problem 2.5. I have scanned Afifi chapter 2 and 3 - this PDF can be found in the shared Google Drive. If you do not have access please email me.</li>
+</ul>
+<p><strong>In class:</strong></p>
 <ul>
 <li>Discuss and share answers to Afifi Problem 2.5</li>
 <li>Preparing Data for Analysis
@@ -165,10 +181,15 @@ border: 1px solid black;}
 </div>
 <div id="friday" class="section level3">
 <h3>Friday</h3>
-<p><strong>Prepare:</strong> If not done yet, complete your code file with all code from the lecture code worked through.</p>
+<p><strong>Prepare:</strong></p>
+<ul>
+<li>Finish write all code from the lecture notes in a markdown file.</li>
+<li>One RMD file per chapter to help keep your notes organized.</li>
+</ul>
+<p><strong>In class:</strong></p>
 <ul>
 <li>Finish data wrangling, munging, recoding, editing, cleaning.</li>
-<li>“<em>On Your Own</em>” problems for Ch 3</li>
+<li>Start “<em>On Your Own</em>” problems for Ch 3 in a new markdown file</li>
 </ul>
 </div>
 </div>
