--- a/wk01.html
+++ b/wk01.html
@@ -138,18 +138,7 @@ border: 1px solid black;}
 <h2>Experience (During Class)</h2>
 <div id="monday" class="section level3">
 <h3>Monday</h3>
-<ul>
-<li>Class logistics, preliminaries, expecations, syllabus</li>
-<li>Review of webpage layout and location of course materials</li>
-<li>Group assignments, seating and screen viewing logistics</li>
-<li>Introduction to the Question Formulation Technique (QFT)</li>
-</ul>
-</div>
-<div id="tuesday" class="section level3">
-<h3>Tuesday</h3>
-<ul>
-<li>OH to help get required programs set up. Suggested times?</li>
-</ul>
+<p><strong>In class:</strong> * Class logistics, preliminaries, expecations, syllabus * Review of webpage layout and location of course materials * Group assignments, seating and screen viewing logistics * Introduction to the Question Formulation Technique (QFT)</p>
 </div>
 <div id="wednesday" class="section level3">
 <h3>Wednesday</h3>
@@ -192,6 +181,18 @@ border: 1px solid black;}
 <li>Start “<em>On Your Own</em>” problems for Ch 3 in a new markdown file</li>
 </ul>
 </div>
+<div id="other" class="section level3">
+<h3>Other</h3>
+<p>The images I took from the Question focus activity done on Monday can be found in a <a href="https://drive.google.com/open?id=1VofDG-p_Df42qsYDg9HgaKgKs_7UfDeXofA0HJen8so">Google Slides presentation</a> in our shared Google Drive. Since we did not get to share very much during class I encourage you to look them over and see what questions other groups came up with.</p>
+</div>
+</div>
+<div id="participation-opportunity" class="section level2">
+<h2>Participation Opportunity</h2>
+<p>Contribute to this set of slides by either</p>
+<ul>
+<li>Adding a common theme in the questions that you notice.</li>
+<li>Providing rational as to why your group chose that question as your priority question.</li>
+</ul>
 </div>
 
 
