add hw submission policy

--- a/Syllabus.html
+++ b/Syllabus.html
@@ -83,7 +83,7 @@ img {
 <ul>
 <li><strong>R</strong> <a href="http://cran.r-project.org/" class="uri">http://cran.r-project.org/</a></li>
 <li><strong>R-Studio</strong> <a href="http://www.rstudio.com/products/rstudio/download/" class="uri">http://www.rstudio.com/products/rstudio/download/</a></li>
-<li><strong>The typesetting environment LaTeX</strong> <a href="http://www.latex-project.org/" class="uri">http://www.latex-project.org/</a></li>
+<li><strong>The typesetting environment LaTeX</strong> <a href="http://www.latex-project.org/ftp.html" class="uri">http://www.latex-project.org/ftp.html</a> (This is a 1.8G+ file. It is not advised to download it on the campus wifi.)</li>
 </ul>
 <p>Here is a <a href="notes/xtra01_InstallPrograms.html">slide deck</a> containing instructions on how to install R and R Studio. <em>Notes are currently from a different class, the Swirl lessons are not needed in this class</em>.</p>
 <p><strong>If you have no prior experience with R you have some choices.</strong></p>
