--- a/wk01.html
+++ b/wk01.html
@@ -183,8 +183,14 @@ border: 1px solid black;}
 </ul>
 <p><strong>In class:</strong></p>
 <ul>
+<li>Review How to submit <a href="admin/rubric.html">homework</a></li>
 <li>Finish data wrangling, munging, recoding, editing, cleaning.</li>
-<li>Start “<em>On Your Own</em>” problems for Ch 3 in a new markdown file</li>
+<li>Start “<em>On Your Own</em>” problems for Ch 3 in a new markdown file
+<ul>
+<li>Due Monday 2/1 midnight</li>
+<li>Upload <strong>the RMD</strong> file ONLY BBlearn</li>
+<li>Make sure it’s named <em>userid_ch3.rmd</em></li>
+</ul></li>
 </ul>
 </div>
 </div>
