--- a/admin/rubric.html
+++ b/admin/rubric.html
@@ -124,12 +124,22 @@ border: 1px solid black;}
 <h2>How to submit homework</h2>
 <ul>
 <li>Homework will be submitted approximately every other week.</li>
-<li>Homework will be submitted either via BBLearn or the shared Google Drive (TBD)</li>
+<li>The file name of your submission should follow this format: <em>userid_assigment</em>
+<ul>
+<li>For example my markdown document for chapter 3 would be <em>rdonatello_ch3.Rmd</em></li>
+</ul></li>
+<li>Double check the notes and blackboard learn to see what file exactly is to be uploaded.
+<ul>
+<li>rmd/word/html/pdf</li>
+</ul></li>
+<li>The requested file should be submitted via BBLearn by the due date. Late homework is generall not accepted.</li>
+<li>Grading will be video recorded. The markedup document and video recording will be put into your personal MATH456 Google Drive folder that you shared with me.</li>
 </ul>
 </div>
 <div id="how-homework-will-be-graded" class="section level2">
 <h2>How homework will be graded</h2>
 <ul>
+<li>If you submit a code file then I will download your code file, and compile it on my machine. What is generated is what I grade. Make sure it looks good before you upload it.</li>
 <li>A random set of 1-3 problems will be chosen to be graded.</li>
 <li>Grading will be done by using the rubric below.</li>
 <li>The full assignment is worth 10 pts.
