update notes and schedule for wk02

--- a/Schedule.html
+++ b/Schedule.html
@@ -159,21 +159,21 @@ table {
 <tr class="even">
 <td align="left">02/01</td>
 <td align="left">M</td>
-<td align="left">wk02: Data screening and Transformations (Ch 4)</td>
-<td align="left">lec01_data_prep</td>
-<td align="left">Homework Due</td>
+<td align="left"><a href="wk02.html">wk02:</a> Data screening and Transformations (Ch 4)</td>
+<td align="left"><a href="notes/lec01_data_prep.html">lec01_data_prep</a></td>
+<td align="left">Ch 3 HW due</td>
 </tr>
 <tr class="odd">
 <td align="left">02/03</td>
 <td align="left">W</td>
-<td align="left">wk02: Selecting Appropriate Analysis (Ch 5)</td>
-<td align="left">lec01_data_prep</td>
+<td align="left"><a href="wk02.html">wk02:</a> Selecting Appropriate Analysis (Ch 5)</td>
+<td align="left"><a href="notes/lec01_data_prep.html">lec01_data_prep</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/05</td>
 <td align="left">F</td>
-<td align="left">wk02: Consulting: Intro to Recruitment Database</td>
+<td align="left">wk02: Consulting- Intro to Recruitment Database</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
