--- a/wk02.html
+++ b/wk02.html
@@ -127,7 +127,8 @@ border: 1px solid black;}
 <p><strong>Homework Due:</strong></p>
 <ul>
 <li>Homework 1 submission - Ch3 On Your Own problems.<br /></li>
-<li>A random set of 1-3 problems will be graded using the <a href="admin/rubric.html">Homework rubric</a></li>
+<li><a href="notes/solutions/ch3_solutions.html">Solutions</a> were posted on 1/31/16 around 4pm.</li>
+<li>This homework will be reviewed for completeness and a <strong>single</strong> random problem will be graded using the <a href="admin/rubric.html">Homework rubric</a></li>
 </ul>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
