--- a/wk02.html
+++ b/wk02.html
@@ -133,7 +133,7 @@ border: 1px solid black;}
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
 <ul>
-<li>Lec 01: Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a><a href="notes/lec01_data_prep.html">[HTML]</a></li>
+<li>Lec 01: Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a> <a href="notes/lec01_data_prep.html">[HTML]</a> <a href="notes/lec01_data_prep.rmd">[RMD]</a></li>
 </ul>
 </div>
 </div>
