--- a/wk02.html
+++ b/wk02.html
@@ -149,7 +149,7 @@ border: 1px solid black;}
 <li>Raw vs. clean data sets.
 <ul>
 <li>Why have both and how to get there in a reproducible manner?</li>
-<li>Right click and save the <a href="notes/dm_depress.RMD">dm_depress</a> RMD file into your class folder. Use this as a starting place to clean the depression data set.</li>
+<li>Right click and save the <a href="notes/dm_depress.rmd">dm_depress</a> RMD file into your class folder. Use this as a starting place to clean the depression data set.</li>
 </ul></li>
 <li>Data screening and transformations using the cleaned depression data.</li>
 </ul>
