fix links to Rmd downloads and rebuild files

--- a/wk02.html
+++ b/wk02.html
@@ -134,7 +134,7 @@ border: 1px solid black;}
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
 <ul>
-<li>Lec 01: Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a> <a href="notes/lec01_data_prep.html">[HTML]</a> <a href="notes/lec01_data_prep.rmd">[RMD]</a></li>
+<li>Lec 01: Preparing Data for Analysis <a href="notes/lec01_data_prep.pdf">[PDF]</a> <a href="notes/lec01_data_prep.html">[HTML]</a> <a href="notes/lec01_data_prep.Rmd">[RMD]</a></li>
 </ul>
 </div>
 </div>
@@ -149,7 +149,7 @@ border: 1px solid black;}
 <li>Raw vs. clean data sets.
 <ul>
 <li>Why have both and how to get there in a reproducible manner?</li>
-<li>Right click and save the <a href="notes/dm_depress.rmd">dm_depress</a> RMD file into your class folder. Use this as a starting place to clean the depression data set.</li>
+<li>Right click and save the <a href="notes/dm_depress.Rmd">dm_depress</a> Rmd file into your class folder. Use this as a starting place to clean the depression data set.</li>
 </ul></li>
 <li>Data screening and transformations using the cleaned depression data.</li>
 </ul>
