linked lec02 notes

--- a/Schedule.html
+++ b/Schedule.html
@@ -181,22 +181,22 @@ table {
 <tr class="odd">
 <td align="left">02/08</td>
 <td align="left">M</td>
-<td align="left">wk03: Review of Simple Linear Regression</td>
-<td align="left">lec02_LinReg</td>
+<td align="left"><a href="wk03.html">wk03:</a> Review of Simple Linear Regression</td>
+<td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
 <td align="left">Quiz 1</td>
 </tr>
 <tr class="even">
 <td align="left">02/10</td>
 <td align="left">W</td>
-<td align="left">wk03: Multiple Linear Regression - Model fitting</td>
-<td align="left">lec02_LinReg</td>
+<td align="left"><a href="wk03.html">wk03:</a> Multiple Linear Regression - Model fitting</td>
+<td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/12</td>
 <td align="left">F</td>
-<td align="left">wk03: MLR - Transformations, Colinearity, predictions</td>
-<td align="left">lec02_LinReg</td>
+<td align="left"><a href="wk03.html">wk03:</a> MLR - Transformations, Colinearity, predictions</td>
+<td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
