add navbar on more pages. update wk03, add graphical assumptions to slr

--- a/Schedule.html
+++ b/Schedule.html
@@ -118,7 +118,7 @@ border: 1px solid black;}
 
 
 </style>
-<p>Helpful Links: <a href="index.html">[Home]</a> <a href="/admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="index.html">[Home]</a> <a href="/admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <!-- unholy hack to make following two tables less wide and the same wide -->
 <style type="text/css">
 table {
