--- a/admin/rubric.html
+++ b/admin/rubric.html
@@ -120,6 +120,7 @@ border: 1px solid black;}
 
 
 </style>
+<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <div id="how-to-submit-homework" class="section level2">
 <h2>How to submit homework</h2>
 <ul>
