--- a/wk03.html
+++ b/wk03.html
@@ -122,19 +122,21 @@ border: 1px solid black;}
 
 
 </style>
-<p><a href="wk02.html">[Week 2]</a> <a href="wk04.html">[Week 4]</a></p>
+<p><a href="Schedule.html">[Schedule]</a> <a href="wk02.html">[Week 2]</a> <a href="wk04.html">[Week 4]</a></p>
 <div id="announcements" class="section level2">
 <h2>Announcements</h2>
 <ul>
 <li>Quiz on Ch 4 &amp; 5 on Monday</li>
-<li>Initial look at recruitment data due wednesday</li>
+<li>Initial look at recruitment data due Wednesday</li>
 </ul>
 </div>
 <div id="prepare" class="section level2">
 <h2>Prepare</h2>
 <ul>
 <li>Complete Ch 4 &amp; 5 HW.</li>
-<li>Read Afifi Ch 6 &amp; 7. Replicate code in lecture notes.</li>
+<li>Read Afifi Ch 6 &amp; 7.</li>
+<li>Download the raw <a href="https://drive.google.com/open?id=0B83Z8_sNw3KPS29hZ1p3eXk4dmc">Lungraw</a> data set, its <a href="https://drive.google.com/open?id=0B83Z8_sNw3KPNHpjZDRfaTR1LTQ">Codebook</a> from the Google Drive, and the <a href="data/dm_lung.Rmd">data management code file</a> to read in clean this data.</li>
+<li>Replicate code in lecture notes for Simple Linear Regression.</li>
 </ul>
 <div id="notes-and-materials" class="section level3">
 <h3>Notes and Materials</h3>
