update wk03 overview

--- a/wk03.html
+++ b/wk03.html
@@ -84,9 +84,13 @@ h2 {
 
 h3 {
   font-size: 24px;
-     color:#00b359;
+     color:#6b8e23;
 }
 
+h4 {
+  font-size: 18px;
+  color:#2E8B57;
+}
 
 h5 {
   font-size: 14px;
@@ -147,23 +151,30 @@ border: 1px solid black;}
 </div>
 <div id="experience" class="section level2">
 <h2>Experience</h2>
-<div id="monday" class="section level3">
-<h3>Monday</h3>
+<div id="monday-2816" class="section level3">
+<h3>Monday 2/8/16</h3>
 <ul>
 <li>Quiz on material from Ch4 and Ch 5.</li>
 <li>Review of Simple Linear Regression - Ch 6</li>
 </ul>
 </div>
-<div id="wednesday" class="section level3">
-<h3>Wednesday</h3>
+<div id="wednesday-21016" class="section level3">
+<h3>Wednesday 2/10/16</h3>
 <ul>
-<li>Multiple Linear Regression - Introduction and Model Fitting</li>
+<li></li>
+<li>Finish Simple Linear Regression
+<ul>
+<li>Predictions</li>
+<li>Assumptions</li>
+</ul></li>
+<li>Complete Ch 6 <em>On Your Own</em> problems.</li>
 </ul>
 </div>
 <div id="friday" class="section level3">
 <h3>Friday</h3>
 <ul>
-<li>Multiple Linear Regression - Transformations, colinearity, predictions.</li>
+<li>Consulting Meeting: Dr. Jim Downing from College of Business</li>
+<li>Multiple Linear Regression - Introduction and Model Fitting</li>
 </ul>
 </div>
 </div>
