add data html, update schedule and linreg notes

--- a/Schedule.html
+++ b/Schedule.html
@@ -80,9 +80,13 @@ h2 {
 
 h3 {
   font-size: 24px;
-     color:#00b359;
+     color:#6b8e23;
 }
 
+h4 {
+  font-size: 18px;
+  color:#2E8B57;
+}
 
 h5 {
   font-size: 14px;
@@ -118,7 +122,7 @@ border: 1px solid black;}
 
 
 </style>
-<p>Navbar: <a href="index.html">[Home]</a> <a href="/admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="index.html">[Home]</a> <a href="./data/Datasets.html">[Data]</a> <a href="./admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <!-- unholy hack to make following two tables less wide and the same wide -->
 <style type="text/css">
 table {
@@ -188,86 +192,114 @@ table {
 <tr class="even">
 <td align="left">02/10</td>
 <td align="left">W</td>
-<td align="left"><a href="wk03.html">wk03:</a> Multiple Linear Regression - Model fitting</td>
+<td align="left"><a href="wk03.html">wk03:</a> Finish SLR, work on consulting report</td>
 <td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
-<td align="left">-</td>
+<td align="left">1st consulting report</td>
 </tr>
 <tr class="odd">
 <td align="left">02/12</td>
 <td align="left">F</td>
-<td align="left"><a href="wk03.html">wk03:</a> MLR - Transformations, Colinearity, predictions</td>
+<td align="left">wk03: Consulting - Visit by Dr. Downing</td>
+<td align="left">-</td>
+<td align="left">Q &amp; A</td>
+</tr>
+<tr class="even">
+<td align="left">02/14</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">CH 6 HW due</td>
+</tr>
+<tr class="odd">
+<td align="left">02/15</td>
+<td align="left">M</td>
+<td align="left">-</td>
 <td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">02/15</td>
-<td align="left">M</td>
-<td align="left">wk04: Variable selection - manual</td>
-<td align="left">-</td>
-<td align="left">Homework Due</td>
-</tr>
-<tr class="odd">
 <td align="left">02/17</td>
 <td align="left">W</td>
-<td align="left">wk04: Variable selection - automated</td>
+<td align="left">wk04: MLR - Transformations, Colinearity, predictions</td>
+<td align="left">-</td>
+<td align="left">-</td>
+</tr>
+<tr class="odd">
+<td align="left">02/19</td>
+<td align="left">F</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">02/19</td>
-<td align="left">F</td>
-<td align="left">wk04: variable selection - penalized functions</td>
+<td align="left">02/21</td>
+<td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
+<td align="left">Quiz 2 - Ch 7</td>
 </tr>
 <tr class="odd">
 <td align="left">02/22</td>
 <td align="left">M</td>
-<td align="left">wk05: Dimension Reduction - PCA</td>
+<td align="left">wk05: Variable selection - manual, automated</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/24</td>
 <td align="left">W</td>
-<td align="left">-</td>
+<td align="left">wk05: variable selection - penalized functions</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/26</td>
 <td align="left">F</td>
-<td align="left">wk05: Dimension reduction - FA</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">2nd consulting report</td>
+</tr>
+<tr class="even">
+<td align="left">02/28</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Homework Due</td>
+</tr>
+<tr class="odd">
+<td align="left">02/29</td>
+<td align="left">M</td>
+<td align="left">wk06: Dimension Reduction - PCA</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
-<td align="left">02/29</td>
-<td align="left">M</td>
-<td align="left">-</td>
+<td align="left">03/02</td>
+<td align="left">W</td>
+<td align="left">wk06: Dimension reduction - FA</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
-<td align="left">03/02</td>
-<td align="left">W</td>
-<td align="left">-</td>
-<td align="left">-</td>
-<td align="left">-</td>
-</tr>
-<tr class="even">
 <td align="left">03/04</td>
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
+<tr class="even">
+<td align="left">03/06</td>
+<td align="left">Su</td>
+<td align="left">-</td>
+<td align="left">-</td>
+<td align="left">Quiz 3</td>
+</tr>
 <tr class="odd">
 <td align="left">03/07</td>
 <td align="left">M</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Exam 1</td>
+<td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">03/09</td>
@@ -281,7 +313,7 @@ table {
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Project 1</td>
+<td align="left">Exam 1</td>
 </tr>
 <tr class="even">
 <td align="left">03/14</td>
