--- a/wk03.html
+++ b/wk03.html
@@ -139,7 +139,7 @@ border: 1px solid black;}
 <ul>
 <li>Complete Ch 4 &amp; 5 HW.</li>
 <li>Read Afifi Ch 6 &amp; 7.</li>
-<li>Download the raw <a href="https://drive.google.com/open?id=0B83Z8_sNw3KPS29hZ1p3eXk4dmc">Lungraw</a> data set, its <a href="https://drive.google.com/open?id=0B83Z8_sNw3KPNHpjZDRfaTR1LTQ">Codebook</a> from the Google Drive, and the <a href="data/dm_lung.Rmd">data management code file</a> to read in clean this data.</li>
+<li>Download the <a href="data/Datasets.html">[Data]</a>, codebook and data management code file for the Lung function data.</li>
 <li>Replicate code in lecture notes for Simple Linear Regression.</li>
 </ul>
 <div id="notes-and-materials" class="section level3">
@@ -161,13 +161,9 @@ border: 1px solid black;}
 <div id="wednesday-21016" class="section level3">
 <h3>Wednesday 2/10/16</h3>
 <ul>
-<li></li>
-<li>Finish Simple Linear Regression
-<ul>
-<li>Predictions</li>
-<li>Assumptions</li>
-</ul></li>
-<li>Complete Ch 6 <em>On Your Own</em> problems.</li>
+<li>Return &amp; Discuss Quiz</li>
+<li>Questions on Simple Linear Regression?</li>
+<li>Complete Ch 6 <em>On Your Own</em> problems. (Due Monday)</li>
 </ul>
 </div>
 <div id="friday" class="section level3">
@@ -181,6 +177,7 @@ border: 1px solid black;}
 <div id="looking-ahead" class="section level2">
 <h2>Looking Ahead</h2>
 <ul>
+<li>Sunday 2/14 - Homework due: Ch 6 on your own problems.</li>
 <li>Variable selection</li>
 </ul>
 </div>
