--- a/notes/lec02_LinReg.html
+++ b/notes/lec02_LinReg.html
@@ -135,7 +135,7 @@ border: 1px solid black;}
 
 
 </style>
-<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="../wk03.html">[Week 3 Overview]</a> <a href="../admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
+<p>Navbar: <a href="../index.html">[Home]</a> <a href="../Schedule.html">[Schedule]</a> <a href="../data/Datasets.html">[Data]</a> <a href="../wk03.html">[Week 3 Overview]</a> <a href="../admin/rubric.html">[HW Rubric]</a> <a href="https://groups.google.com/forum/#!forum/csuc_stat">[Google Group]</a> <a href="https://drive.google.com/a/mail.csuchico.edu/folderview?id=0B83Z8_sNw3KPcnVrYzVFRHUtcHM&amp;usp=sharing">[Google Drive]</a></p>
 <div id="assigned-reading" class="section level1">
 <h1>Assigned Reading</h1>
 <p>Afifi: Chapters 6-7</p>
