--- a/data/Datasets.html
+++ b/data/Datasets.html
@@ -144,33 +144,33 @@ table {
 <tbody>
 <tr class="odd">
 <td align="left">Depression</td>
-<td align="left"><a href="data/Depress.txt">Depress.txt</a></td>
-<td align="left"><a href="data/DepressCodebook.txt">DepressCodebook.txt</a></td>
-<td align="left"><a href="data/dm_depress.Rmd">dm_depress.Rmd</a></td>
+<td align="left"><a href="Depress.txt">Depress.txt</a></td>
+<td align="left"><a href="DepressCodebook.txt">DepressCodebook.txt</a></td>
+<td align="left"><a href="dm_depress.Rmd">dm_depress.Rmd</a></td>
 <td align="left">2016-02-09 09:51:44</td>
 <td align="left">Afifi Appendix A3</td>
 </tr>
 <tr class="even">
 <td align="left">North Carolina Births</td>
-<td align="left"><a href="data/NCbirths.csv">NCbirths.csv</a></td>
-<td align="left"><a href="data/NCBirthsCodebook.html">NCBirthsCodebook.html</a></td>
+<td align="left"><a href="NCbirths.csv">NCbirths.csv</a></td>
+<td align="left"><a href="NCBirthsCodebook.html">NCBirthsCodebook.html</a></td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">Parental HIV</td>
-<td align="left"><a href="data/Parhiv.csv">Parhiv.csv</a></td>
-<td align="left"><a href="data/ParhivCodebook.txt">ParhivCodebook.txt</a></td>
+<td align="left"><a href="Parhiv.csv">Parhiv.csv</a></td>
+<td align="left"><a href="ParhivCodebook.txt">ParhivCodebook.txt</a></td>
 <td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">Lung function</td>
-<td align="left"><a href="data/Lungraw.txt">Lungraw.txt</a></td>
-<td align="left"><a href="data/LungCodebook.txt">LungCodebook.txt</a></td>
-<td align="left"><a href="data/dm_lung.Rmd">dm_lung.Rmd</a></td>
+<td align="left"><a href="Lungraw.txt">Lungraw.txt</a></td>
+<td align="left"><a href="LungCodebook.txt">LungCodebook.txt</a></td>
+<td align="left"><a href="dm_lung.Rmd">dm_lung.Rmd</a></td>
 <td align="left">2016-02-08 13:14:45</td>
 <td align="left">Afifi Appendix A6</td>
 </tr>
