finish MLR, rebuild schedule, start lec05

--- a/Schedule.html
+++ b/Schedule.html
@@ -158,34 +158,34 @@ table {
 <td align="left">01/29</td>
 <td align="left">F</td>
 <td align="left"><a href="wk01.html">wk01:</a> Data cleaning (Ch 3)</td>
-<td align="left"><a href="notes/lec01_data_prep.html">lec01_data_prep</a></td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/01</td>
 <td align="left">M</td>
 <td align="left"><a href="wk02.html">wk02:</a> Data screening and Transformations (Ch 4)</td>
-<td align="left"><a href="notes/lec01_data_prep.html">lec01_data_prep</a></td>
+<td align="left">-</td>
 <td align="left">Ch 3 HW due</td>
 </tr>
 <tr class="odd">
 <td align="left">02/03</td>
 <td align="left">W</td>
 <td align="left"><a href="wk02.html">wk02:</a> Selecting Appropriate Analysis (Ch 5)</td>
-<td align="left"><a href="notes/lec01_data_prep.html">lec01_data_prep</a></td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/05</td>
 <td align="left">F</td>
-<td align="left">wk02: Consulting- Intro to Recruitment Database</td>
+<td align="left"><a href="wk02.html">wk02:</a> Consulting- Intro to Recruitment Database</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/08</td>
 <td align="left">M</td>
-<td align="left"><a href="wk03.html">wk03:</a> Review of Simple Linear Regression</td>
+<td align="left"><a href="wk03.html">wk03:</a> Simple Linear Regression (Ch 6)</td>
 <td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
 <td align="left">Quiz 1</td>
 </tr>
@@ -193,13 +193,13 @@ table {
 <td align="left">02/10</td>
 <td align="left">W</td>
 <td align="left"><a href="wk03.html">wk03:</a> Finish SLR, work on consulting report</td>
-<td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
+<td align="left">-</td>
 <td align="left">1st consulting report</td>
 </tr>
 <tr class="odd">
 <td align="left">02/12</td>
 <td align="left">F</td>
-<td align="left">wk03: Consulting - Visit by Dr. Downing</td>
+<td align="left"><a href="wk03.html">wk03:</a> Consulting - Visit by Dr. Downing</td>
 <td align="left">-</td>
 <td align="left">Q &amp; A</td>
 </tr>
@@ -213,23 +213,23 @@ table {
 <tr class="odd">
 <td align="left">02/15</td>
 <td align="left">M</td>
-<td align="left">-</td>
-<td align="left"><a href="notes/lec02_LinReg.html">lec02_LinReg</a></td>
+<td align="left"><a href="wk04.html">wk04:</a> MLR - Fitting, predictions, interpretations(Ch 7)</td>
+<td align="left"><a href="notes/lec03_MultLinReg.html">lec03_MultLinReg</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/17</td>
 <td align="left">W</td>
-<td align="left">wk04: MLR - Transformations, Colinearity, predictions</td>
+<td align="left"><a href="wk04.html">wk04:</a> MLR - Interactions</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/19</td>
 <td align="left">F</td>
+<td align="left"><a href="wk04.html">wk04:</a> MLR - Stratification</td>
 <td align="left">-</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">Consulting reflection</td>
 </tr>
 <tr class="even">
 <td align="left">02/21</td>
@@ -241,22 +241,22 @@ table {
 <tr class="odd">
 <td align="left">02/22</td>
 <td align="left">M</td>
-<td align="left">wk05: Variable selection - manual, automated</td>
-<td align="left">-</td>
+<td align="left">wk05: Variable selection - manual, automated (Ch 8)</td>
+<td align="left">lec04_VarSelection</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/24</td>
 <td align="left">W</td>
-<td align="left">wk05: variable selection - penalized functions</td>
+<td align="left">wk05: Variable selection - penalized functions</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/26</td>
 <td align="left">F</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">wk05: Other topics - Ridge regression (ch 9)</td>
+<td align="left">lec05_OtherTopics</td>
 <td align="left">2nd consulting report</td>
 </tr>
 <tr class="even">
@@ -264,19 +264,19 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Homework Due</td>
+<td align="left">HW due</td>
 </tr>
 <tr class="odd">
 <td align="left">02/29</td>
 <td align="left">M</td>
-<td align="left">wk06: Dimension Reduction - PCA</td>
+<td align="left">wk06: Other topics - missing data</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">03/02</td>
 <td align="left">W</td>
-<td align="left">wk06: Dimension reduction - FA</td>
+<td align="left">wk06: Other topics - reference coding</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -297,14 +297,14 @@ table {
 <tr class="odd">
 <td align="left">03/07</td>
 <td align="left">M</td>
-<td align="left">-</td>
+<td align="left">wk07: Dimension Reduction - PCA</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">03/09</td>
 <td align="left">W</td>
-<td align="left">-</td>
+<td align="left">wk07: Dimension reduction - FA</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
