updated schedule and wk04 overview

--- a/wk04.html
+++ b/wk04.html
@@ -159,26 +159,40 @@ border: 1px solid black;}
 <div id="wednesday-21716" class="section level3">
 <h3>Wednesday 2/17/16</h3>
 <ul>
-<li>Multiple linear regression - Interactions</li>
+<li>Multiple linear regression - Interactions &amp; stratification</li>
 </ul>
 </div>
-<div id="friday-21816" class="section level3">
-<h3>Friday 2/18/16</h3>
+<div id="friday-21916" class="section level3">
+<h3>Friday 2/19/16</h3>
 <ul>
-<li>Multiple linear regression - Stratification</li>
-<li>Consulting reflection assignment due EOD</li>
+<li>Consulting
+<ul>
+<li>Reflection on discussion boards due today</li>
+<li>Comparative analysis of chosen variables needs to be worked on.</li>
+<li>Draft of report due next Friday 2/26</li>
+<li>Dr Downing has OH 10-11:30 on Wednesday. Go ask him questions.</li>
+</ul></li>
+<li>Handouts: Harrell Ch 1 &amp; 2</li>
+<li>Writing models, reference coding and contrasts</li>
 </ul>
 </div>
 </div>
 <div id="looking-ahead" class="section level2">
 <h2>Looking Ahead</h2>
 <ul>
-<li>Quiz on Ch 7 - BBLearn due Sunday</li>
-<li>Variable selection</li>
+<li>BBLearn Quiz on Ch 7 - Due Monday @ 12. Topics include:
+<ul>
+<li>Writing and fitting linear models</li>
+<li>Interpretation of coefficients</li>
+<li>Model Diagnostics (also reference Harrel Ch 1)</li>
+<li>Testing hypothesis using indicator variables and contrasts.</li>
+</ul></li>
+<li>Splines, Missing Data</li>
 </ul>
 </div>
 <div id="additional-references" class="section level2">
 <h2>Additional references</h2>
+<p>Regression Modeling Strategies (Harrell), e-book plus tons of supplemental materials including R code: <a href="http://biostat.mc.vanderbilt.edu/wiki/Main/RmS" class="uri">http://biostat.mc.vanderbilt.edu/wiki/Main/RmS</a></p>
 <p>Not fully random links to other websites demonstrating regression modeling in R</p>
 <ul>
 <li><a href="http://ww2.coastal.edu/kingw/statistics/R-tutorials/multregr.html" class="uri">http://ww2.coastal.edu/kingw/statistics/R-tutorials/multregr.html</a></li>
