finish lec04 fix typos in 02 and 03 rebuild schedule updt wk05 overview

--- a/Schedule.html
+++ b/Schedule.html
@@ -241,22 +241,22 @@ table {
 <tr class="odd">
 <td align="left">02/22</td>
 <td align="left">M</td>
-<td align="left">wk05: Splines</td>
-<td align="left">lec04_OtherTopics</td>
+<td align="left"><a href="wk05.html">wk05:</a> Reference coding</td>
+<td align="left"><a href="notes/lec04_Indicators_Splines.html">lec04_Indicators_Splines</a></td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">02/24</td>
 <td align="left">W</td>
-<td align="left">wk05: Intro to missing data</td>
-<td align="left">Harrell_Ch3</td>
+<td align="left"><a href="wk05.html">wk05:</a> Splines</td>
+<td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">02/26</td>
 <td align="left">F</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">wk05: Intro to missing data</td>
+<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
 <td align="left">2nd consulting report</td>
 </tr>
 <tr class="even">
