--- a/data/Datasets.html
+++ b/data/Datasets.html
@@ -146,8 +146,8 @@ table {
 <td align="left">Depression</td>
 <td align="left"><a href="Depress.txt">Depress.txt</a></td>
 <td align="left"><a href="DepressCodebook.txt">DepressCodebook.txt</a></td>
-<td align="left"><a href="dm_depress.Rmd">dm_depress.Rmd</a></td>
-<td align="left">2016-02-09 09:51:44</td>
+<td align="left"><a href="dm_depress.html">dm_depress.html</a></td>
+<td align="left">2016-02-08 13:14:45</td>
 <td align="left">Afifi Appendix A3</td>
 </tr>
 <tr class="even">
@@ -162,15 +162,15 @@ table {
 <td align="left">Parental HIV</td>
 <td align="left"><a href="Parhiv.csv">Parhiv.csv</a></td>
 <td align="left"><a href="ParhivCodebook.txt">ParhivCodebook.txt</a></td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left"><a href="dm_parhiv.html">dm_parhiv.html</a></td>
+<td align="left">2016-02-22 11:54:42</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">Lung function</td>
 <td align="left"><a href="Lungraw.txt">Lungraw.txt</a></td>
 <td align="left"><a href="LungCodebook.txt">LungCodebook.txt</a></td>
-<td align="left"><a href="dm_lung.Rmd">dm_lung.Rmd</a></td>
+<td align="left"><a href="dm_lung.html">dm_lung.html</a></td>
 <td align="left">2016-02-08 13:14:45</td>
 <td align="left">Afifi Appendix A6</td>
 </tr>
