--- a/wk05.html
+++ b/wk05.html
@@ -152,6 +152,7 @@ border: 1px solid black;}
 <h3>Wednesday 2/24/16</h3>
 <ul>
 <li>Splines</li>
+<li>other stuff that we’re going to talk about</li>
 <li>Dr. Downing’s Office Hours: 10-11:30 Glenn 204</li>
 </ul>
 </div>
