update downing visit

--- a/Schedule.html
+++ b/Schedule.html
@@ -255,8 +255,8 @@ table {
 <tr class="odd">
 <td align="left">02/26</td>
 <td align="left">F</td>
-<td align="left">wk05: Intro to missing data</td>
-<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
+<td align="left">wk05: Improving your model</td>
+<td align="left">-</td>
 <td align="left">2nd consulting report</td>
 </tr>
 <tr class="even">
@@ -264,7 +264,7 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">HW due</td>
+<td align="left">HW due - lec04</td>
 </tr>
 <tr class="odd">
 <td align="left">02/29</td>
@@ -283,8 +283,8 @@ table {
 <tr class="odd">
 <td align="left">03/04</td>
 <td align="left">F</td>
-<td align="left">-</td>
-<td align="left">-</td>
+<td align="left">wk06: Dimension Reduction - PCA</td>
+<td align="left">lec06_DimReduction</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
@@ -292,12 +292,12 @@ table {
 <td align="left">Su</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Quiz 3</td>
+<td align="left">Quiz 3 - lec05/06</td>
 </tr>
 <tr class="odd">
 <td align="left">03/07</td>
 <td align="left">M</td>
-<td align="left">wk07: Dimension Reduction - PCA</td>
+<td align="left">wk07: Consulting - Visit by Dr. Downing</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
@@ -313,7 +313,7 @@ table {
 <td align="left">F</td>
 <td align="left">-</td>
 <td align="left">-</td>
-<td align="left">Exam 1</td>
+<td align="left">Exam 1 - Lec01 - 06</td>
 </tr>
 <tr class="even">
 <td align="left">03/14</td>
@@ -451,21 +451,21 @@ table {
 <tr class="odd">
 <td align="left">05/02</td>
 <td align="left">M</td>
-<td align="left">wk15: Missing Data - Identification</td>
-<td align="left">-</td>
+<td align="left">wk15: Missing Data - Identification and Imputations</td>
+<td align="left">Afifi Ch 9.2, Harrell Ch3</td>
 <td align="left">-</td>
 </tr>
 <tr class="even">
 <td align="left">05/04</td>
 <td align="left">W</td>
-<td align="left">wk15: Missing Data - Imputations</td>
+<td align="left">wk15: Missing Data - MICE</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
 <tr class="odd">
 <td align="left">05/06</td>
 <td align="left">F</td>
-<td align="left">wk15: Missing Data - MICE</td>
+<td align="left">-</td>
 <td align="left">-</td>
 <td align="left">-</td>
 </tr>
